Fixed chat word wrap weirdness. References #404

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -94,6 +94,7 @@
 .trpChatEdit, .trpChatReads {
   opacity: 0.2;
   padding: 2px 4px 0 0;
+  height: 16px;
 }
 
 // hide the edit and read buttons by default
